Changes must be committed!

--- a/02-Fundamentals Part 2/index.html
+++ b/02-Fundamentals Part 2/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <input type="text" id="name" placeholder="Enter your name">
     <script src="script.js"></script>
 </body>
 </html>
