--- a/03-DOM/index.html
+++ b/03-DOM/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="text-align: center;">
+    <label>Enter your email: </label>
+    <input id="email" placeholder="Enter your email">
+    <button onclick="checkIsAEmail()">Submit</button>
+    <p id="result"></p>
     <script src="script.js"></script>
 </body>
 </html>
