Changes must be committed!

--- a/03-DOM/index.html
+++ b/03-DOM/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="text-align: center;">
-    <label>Enter your email: </label>
+<body class="theBody" style="text-align: center;">
+    <label id="label">Enter your email: </label>
     <input id="email" placeholder="Enter your email">
     <button onclick="checkIsAEmail()">Submit</button>
     <p id="result"></p>
+    <span id="span">This is a spam!</span>
     <script src="script.js"></script>
 </body>
 </html>
