--- a/03-DOM/index.html
+++ b/03-DOM/index.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body class="theBody" style="text-align: center;">
+    <h1 id="title">Email Validator</h1>
     <label id="label">Enter your email: </label>
     <input id="email" placeholder="Enter your email">
-    <button onclick="checkIsAEmail()">Submit</button>
+    <button id="btn" class="btn btn-primary" onclick="checkIsAEmail()">Submit</button>
     <p id="result"></p>
     <span id="span">This is a spam!</span>
+    <span id="span">This is a spam!</span>
+    <span id="span">This is a spam!</span>
+    <strong id="strong">I am strong!</strong>
     <script src="script.js"></script>
 </body>
 </html>
