Changes must be committed!

--- a/03-DOM/index.html
+++ b/03-DOM/index.html
@@ -8,6 +8,7 @@
 </head>
 <body class="theBody" style="text-align: center;">
     <h1 id="title">Email Validator</h1>
+    <br><br>
     <label id="label">Enter your email: </label>
     <input id="email" placeholder="Enter your email">
     <button id="btn" class="btn btn-primary" onclick="checkIsAEmail()">Submit</button>
@@ -16,6 +17,7 @@
     <span id="span">This is a spam!</span>
     <span id="span">This is a spam!</span>
     <strong id="strong">I am strong!</strong>
+    <div class="container"></div>
     <script src="script.js"></script>
 </body>
 </html>
