Changes must be committed!

--- a/03-DOM/index.html
+++ b/03-DOM/index.html
@@ -18,6 +18,7 @@
     <span id="span">This is a spam!</span>
     <strong id="strong">I am strong!</strong>
     <div class="container"></div>
+    <button class="btn btn-secondary"><a target="_blank" href="app.html" style="text-decoration: none; color: black;">Click me!</a></button>
     <script src="script.js"></script>
 </body>
 </html>
