--- a/02-Fundamentals Part 2/index.html
+++ b/02-Fundamentals Part 2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundamentals Part 2</title>
 </head>
 <body>
     <input type="text" id="name" placeholder="Enter your name">
