--- a/04-jQuery/index.html
+++ b/04-jQuery/index.html
@@ -6,6 +6,6 @@
     <title>jQuery</title>
   </head>
   <body>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
