--- a/04-jQuery/index.html
+++ b/04-jQuery/index.html
@@ -15,6 +15,6 @@
     <button class="btn btn-info">Save</button>
     <button class="btn btn-light">Save</button>
     <button class="btn btn-dark">Save</button>
-    <script src="app.min.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
