--- a/04-jQuery/index.html
+++ b/04-jQuery/index.html
@@ -6,11 +6,11 @@
     <title>jQuery</title>
   </head>
   <body>
-    <h1>Sri Lanka</h1>
+    <h1>Ceylon</h1>
     <button class="btn btn-primary">Save (class)</button>
     <button class="btn btn-secondary">Save (id)</button>
     <button class="btn btn-success">Save</button>
-    <button class="btn btn-danger">Save</button>
+    <button class="btn btn-danger" id="sv-btn">Save</button>
     <button class="btn btn-warning">Save</button>
     <button class="btn btn-info">Save</button>
     <button class="btn btn-light">Save</button>
