--- a/04-jQuery/index.html
+++ b/04-jQuery/index.html
@@ -6,7 +6,8 @@
     <title>jQuery</title>
   </head>
   <body>
-    <h1>Ceylon</h1>
+    <h1><em>Ceylon</em></h1>
+    <strong>I am strong!</strong><br>
     <button class="btn btn-primary">Save (class)</button>
     <button class="btn btn-secondary">Save (id)</button>
     <button class="btn btn-success">Save</button>
