Changes must be committed!

--- a/04-jQuery/index.html
+++ b/04-jQuery/index.html
@@ -9,9 +9,9 @@
     <h1><em>Ceylon</em></h1>
     <strong>I am strong!</strong><br>
     <button class="btn btn-primary">Save (class)</button>
-    <button class="btn btn-secondary">Save (id)</button>
+    <button class="btn btn-secondary" id="sv-btn">Save (id)</button>
     <button class="btn btn-success">Save</button>
-    <button class="btn btn-danger" id="sv-btn">Save</button>
+    <button class="btn btn-danger">Save</button>
     <button class="btn btn-warning">Save</button>
     <button class="btn btn-info">Save</button>
     <button class="btn btn-light">Save</button>
